1999-08-15    <mkp@mkp.net>

	* daemon/auth.c: Fixed cookie problems for local displays.

	* daemon/gdm.c (gdm_display_dispose): Free Xauth.

1999-08-14    <mkp@mkp.net>

	* gui/gdmlogin.c: Fixed a few gtk_widget_set_sensitive(NULL)
 	occurrences.

1999-08-11    <mkp@mkp.net>

	* daemon/auth.c: Nailed down the bug that has been haunting me the
 	past couple of days. gdm no longer corrupts ~user/.Xauthority if
 	it contains ``foreign'' cookies.

1999-08-08    <mkp@mkp.net>

	Finally merged the Ottawa megapatch:

	* daemon/auth.c: Real XAuth implementation. Doesn't rely on
 	/usr/bin/X11/xauth anymore.

	* gui/gdmlogin.c: Implemented browser functionality.

	* gui/gdmconfig.c: First shot at a graphical configuration tool.

	* gui/gdmface.c: Face selector capplet.

1999-08-07    <mkp@mkp.net>

	* Replaced gdm_putenv() with calls to setenv() as putenv() is
 	broken by specification.

1999-08-07  Anders Carlsson <anders.carlsson@tordata.se>

	* configure.in (ALL_LINGUAS): Added sv to ALL_LINGUAS.

1999-08-02    <mkp@mkp.net>

	* md5.c, md5.h, cookie.c: Fixed MD5 endianness problem (Reported
 	by <gewrgiou@imbc.gr>, bugzilla 3898).

1999-07-24  Tristan Tarrant  <ttarrant@etnoteam.it>

	* gui/gdmchooser.c (main): centre all dialogs

	* gui/gdmlogin.c (main): the same

1999-07-14  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gui/gdmchooser.c (gdm_chooser_gui_init): Set the scrollbar
	adjustment properly.

1999-06-30    <mkp@mkp.net>

	* daemon/xdmcp.c (gdm_xdmcp_handle_forward_query): First shot at
 	implementing FORWARD_QUERY. gdm supports being chosen from remote
 	hosts now, but still doesn't provide chooser functionality itself.

1999-06-29    <mkp@mkp.net>

	* daemon/verify.c (gdm_verify_user): Transfer PAM environment to
 	user session (Suggested by nalin@thermo.stat.ncsu.edu)

1999-05-14  Jacob Berkman  <jberk+@cmu.edu>

	* gui/gdmlogin.c (gdm_parse_enriched_string): added support
	for processor type for Welcome text